--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,16 +15,10 @@ nav {
   background-color: $primary-color;
 }
 
-.nav-search {
+.nav-search input#search {
+  background-color: $white;
   border: $border;
   border-radius: $radius;
-  height: 50px;
-  outline: none;
-  width: $width;
-  margin-left: 20px;
+  font-family: $primary-font;
   padding: 0 20px;
-}
-
-input {
-  border-bottom: none;
 }
