--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,29 @@
+html {
+  margin: 0px; }
+
+body {
+  margin: 0px; }
+
 .jumbotron {
   background-color: #E1F2FD;
   height: 500px; }
 
 nav {
-  background-color: #E1F2FD; }
+  background-color: #E1F2FD;
+  vertical-align: middle; }
+
+.nav-items li {
+  list-style-type: none;
+  margin: 0px 20px; }
+
+.nav-items a {
+  text-decoration: none; }
 
 .nav-search input#search {
-  background-color: #fff;
   border: 2px solid #1CA5F7;
   border-radius: 50px;
   font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
-  padding: 0 20px; }
+  padding: 0 20px;
+  margin-left: 20px; }
 
 /*# sourceMappingURL=style.css.map */
