Added a radius around the img tags

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ html, body {
 
 .image-container img {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  border-radius: 50px; }
 
 .push, footer {
   height: 50px; }
