--- a/scss/style.scss
+++ b/scss/style.scss
@@ -103,6 +103,7 @@ html, body {
   img {
     width: 100%;
     height: 100%;
+    border-radius: $radius;
   }
 }
 
@@ -127,5 +128,4 @@ footer {
   font-weight: $primary-weight;
   text-align: center;
   margin-bottom: 0;
-
 }
