--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ html, body {
 .image-container img {
   width: 100%;
   height: 100%;
-  border-radius: 50px; }
+  border: 2px solid #1CA5F7; }
 
 .push, footer {
   height: 50px; }
