--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,7 @@ html, body {
 
 .image-container img {
   width: 100%;
-  height: 100%;
-  border: 2px solid #1CA5F7; }
+  height: 100%; }
 
 .push, footer {
   height: 50px; }
