Added styling for smaller buttons

--- a/scss/components/_search-input.scss
+++ b/scss/components/_search-input.scss
@@ -2,4 +2,7 @@ $width: 25%; //width of the search bar
 
 $border: 2px solid #1CA5F7;//border styles
 
+$border-white: 2px solid #fff; // button with white style
+
 $radius: 50px;
+$small-radius: 20px;
