Added a smaller font size variable

--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -8,6 +8,7 @@ $jumbotron-title: 72px; // used for the jumbotron heading
 $primary-size: 14px; //used for primary text
 $small-size: 12px; //used for small type
 $large-size: 16px; //used for larger type
+$extra-sm-size: 10px; // used for the buttons on hover effects
 
 
 // == Weight ==================================================================
