--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ html, body {
   height: 100%;
   margin: 0px; }
 
+.columns:nth-child(5) {
+  margin-left: 0; }
+
 .jumbotron {
   align-content: space-between;
   background-color: #E1F2FD;
@@ -45,7 +48,7 @@ html, body {
   justify-content: center;
   margin-top: 50px; }
 
-.button {
+.call-button {
   background-color: transparent;
   border: 2px solid #1CA5F7;
   border-radius: 50px;
@@ -54,7 +57,7 @@ html, body {
   font-size: 14px;
   font-weight: 300;
   margin: 0 auto; }
-  .button:hover {
+  .call-button:hover {
     background-color: #1CA5F7;
     border: 2px solid #1CA5F7;
     color: #fff; }
@@ -65,11 +68,47 @@ html, body {
   margin-top: 100px; }
 
 .poster-container {
-  display: flex; }
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 85px; }
 
-.image-container img {
-  width: 100%;
-  height: 100%; }
+.action-buttons {
+  background-color: #1CA5F7;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 20%;
+  padding: 4px;
+  position: absolute;
+  visibility: hidden;
+  width: 20%; }
+  .action-buttons .list-button {
+    background-color: white;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    color: #1CA5F7;
+    flex-basis: content;
+    font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
+    font-size: 10px;
+    font-weight: 700;
+    margin: auto 0;
+    padding: 0 10px; }
+    .action-buttons .list-button:hover {
+      background-color: transparent;
+      border: 2px solid #fff;
+      color: #fff; }
+
+.image-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px; }
+  .image-container img {
+    width: 100%;
+    height: 100%; }
+  .image-container:hover .action-buttons {
+    visibility: visible; }
 
 .push, footer {
   height: 50px; }
