--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,25 @@
-// Imports ====================================================================
+// IMPORTS ====================================================================
+
 @import "components/_typography";
 @import "components/_search-input";
 @import "components/_colors";
 @import "components/normalize";
+
+// VARIABLES ==================================================================
+
+$max: 100%;
 
 // == Body styles =============================================================
 
 html, body {
   height: 100%;
   margin: 0px;
+}
+
+// == Framework overrides =====================================================
+
+.columns:nth-child(5) {
+  margin-left: 0;
 }
 
 // == Jumbotron styles ========================================================
@@ -70,7 +81,7 @@ html, body {
   margin-top: 50px;
 }
 
-.button {
+.call-button {
   background-color: transparent;
   border: $border;
   border-radius: $radius;
@@ -97,12 +108,57 @@ html, body {
 
 .poster-container {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 85px;
+}
+
+.action-buttons {
+  background-color: $accent-color;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 20%;
+  padding: 4px;
+  position: absolute;
+  visibility: hidden;
+  width: 20%;
+
+  .list-button {
+    background-color: white;
+    border: $border-white;
+    border-radius: $small-radius;
+    color: $accent-color;
+    flex-basis: content;
+    font-family: $primary-font;
+    font-size: $extra-sm-size;
+    font-weight: $heavy-weight;
+    margin: auto 0;
+    padding: 0 10px;
+
+    &:hover {
+      background-color: transparent;
+      border: $border-white;
+      color: $white;
+    }
+  }
 }
 
 .image-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+
   img {
-    width: 100%;
-    height: 100%;
+    width: $max;
+    height: $max;
+  }
+
+  &:hover { // when the user hovers over the poster image show the hidden buttons
+    .action-buttons {
+      visibility: visible;
+    }
   }
 }
 
