--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,7 +18,7 @@ html, body {
 
 // == Framework overrides =====================================================
 
-.columns:nth-child(5) {
+.three.columns:nth-of-type(4n+5) {
   margin-left: 0;
 }
 
