--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+@keyframes flip-animation {
+  from {
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    animation-timing-function: ease-in;
+    opacity: 0; }
+  40% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    animation-timing-function: ease-in; }
+  60% {
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1; }
+  80% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg); }
+  to {
+    transform: perspective(400px); } }
+.flip-animation {
+  -webkit-backface-visibility: visible !important;
+  backface-visibility: visible !important;
+  animation-name: flip-animation; }
+
 html, body {
   height: 100%;
   margin: 0px; }
@@ -79,10 +99,12 @@ html, body {
   display: flex;
   flex-direction: column;
   height: 20%;
+  opacity: 0.8;
   padding: 4px;
   position: absolute;
   visibility: hidden;
-  width: 20%; }
+  width: 20%;
+  z-index: 9; }
   .action-buttons .list-button {
     background-color: white;
     border: 2px solid #fff;
@@ -108,7 +130,11 @@ html, body {
     width: 100%;
     height: 100%; }
   .image-container:hover .action-buttons {
-    visibility: visible; }
+    visibility: visible;
+    animation-duration: 0.4s;
+    animation-name: flip-animation; }
+  .image-container:hover img {
+    filter: blur(2px); }
 
 .push, footer {
   height: 50px; }
