--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ html, body {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  height: 20%;
+  height: 10%;
   opacity: 0.8;
   padding: 4px;
   position: absolute;
@@ -149,10 +149,10 @@ html, body {
   display: none;
   left: 50%;
   padding: 20px;
-  position: absolute;
+  position: fixed;
   top: 50%;
   transform: translate3d(-50%, -50%, 0);
-  width: 60%;
+  width: 40%;
   z-index: 10; }
 
 .close {
