--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ html, body {
   position: absolute;
   visibility: hidden;
   width: 20%;
-  z-index: 8; }
+  z-index: 7; }
   .action-buttons .list-button {
     background-color: white;
     border: 2px solid #fff;
@@ -121,7 +121,8 @@ html, body {
     font-size: 10px;
     font-weight: 700;
     margin: auto 0;
-    padding: 0 10px; }
+    padding: 0 10px;
+    z-index: 8; }
     .action-buttons .list-button:hover {
       background-color: transparent;
       border: 2px solid #fff;
@@ -192,6 +193,7 @@ hr {
 .modal-overlay {
   background-color: #383838;
   display: none;
+  filter: blur(2px);
   opacity: 0.6;
   position: fixed;
   top: 0;
