--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,12 @@ html, body {
 .three.columns:nth-of-type(4n+5) {
   margin-left: 0; }
 
+.list-item:nth-child(2n+1) {
+  margin-left: 0; }
+
+.six.columns:nth-of-type(2n+1) {
+  margin-left: 0; }
+
 .jumbotron {
   background-color: #E1F2FD;
   height: 500px;
@@ -43,6 +49,8 @@ html, body {
   background-color: #E1F2FD;
   display: flex;
   justify-content: flex-end; }
+  .nav .nav-items {
+    margin-bottom: 0; }
   .nav .nav-items li {
     color: #1CA5F7;
     display: inline;
@@ -60,6 +68,11 @@ html, body {
     color: #1CA5F7;
     font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
     font-size: 14px; }
+
+.nav-bar {
+  align-content: center;
+  height: auto;
+  padding: 20px; }
 
 .tagline {
   color: #1CA5F7;
@@ -88,9 +101,20 @@ html, body {
     border: 2px solid #1CA5F7;
     color: #fff; }
 
+.heading {
+  color: #1CA5F7;
+  font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
+  font-size: 50px;
+  font-weight: 400;
+  letter-spacing: 0.005em;
+  margin-top: 100px; }
+
 .subheading {
   color: #1CA5F7;
   font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
+  font-size: 30px;
+  font-weight: 400;
+  letter-spacing: -0.03em;
   margin-top: 100px; }
 
 .poster-container {
@@ -138,10 +162,29 @@ html, body {
     height: 100%; }
   .image-container:hover .action-buttons {
     visibility: visible;
-    animation-duration: 0.4s;
+    animation-duration: 0.7s;
     animation-name: flip-animation; }
   .image-container:hover img {
     filter: blur(2px); }
+  .image-container:hover .no-hover {
+    filter: blur(0px); }
+
+.list-image-container {
+  width: 100%; }
+  .list-image-container .list-poster {
+    width: 100%; }
+
+.list-title {
+  color: #383838;
+  font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
+  font-size: 24px;
+  font-weight: 400; }
+
+.basic-para {
+  color: #383838;
+  font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
+  font-size: 12px;
+  font-weight: 400; }
 
 .modal {
   background-color: #fff;
@@ -172,7 +215,7 @@ hr {
 
 .list-container a {
   text-decoration: none; }
-.list-container .list-item {
+.list-container .user-list-item {
   border-bottom: 1px solid #9e9e9e;
   color: #383838;
   font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
@@ -181,7 +224,7 @@ hr {
   margin: 0;
   padding: 10px;
   text-align: center; }
-  .list-container .list-item:hover {
+  .list-container .user-list-item:hover {
     background-color: #1CA5F7;
     border-bottom: 1px solid #1CA5F7;
     color: #fff; }
