--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,11 @@ hr {
   flex-wrap: wrap;
   margin-bottom: 85px; }
 
+#movie-details {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
+
 .action-buttons {
   background-color: #1CA5F7;
   border-radius: 10px;
@@ -131,8 +136,7 @@ hr {
   justify-content: center;
   margin-bottom: 15px; }
   .image-container img {
-    width: 100%;
-    height: 100%; }
+    width: 100%; }
   .image-container:hover .action-buttons {
     visibility: visible;
     animation-duration: 0.5s;
